minor fixes for content overflowing window

--- a/res/style.css
+++ b/res/style.css
@@ -1,6 +1,5 @@
 html {
   zoom: 100%;
-  overflow-x: hidden;
 }
 
 @font-face {
